# nesEMU

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.history/src/: Untitled-1_20251124130819.md
roms/: Castlevania (USA).nes  Mega Man (Europe).nes  Punch-Out!! (Europe).nes
src/: AudioOut.cpp  Bus.cpp  EmuApp.cpp  FileDialogs.cpp  GLTextures.cpp  KeybindsUI.cpp  Untitled-2.md  apu.cpp  cartridge.cpp  cpu.cpp  mapper.cpp  ppu.cpp
src/Mappers/: Mapper000.cpp  Mapper000.h  Mapper001.cpp  Mapper001.h  Mapper002.cpp  Mapper002.h  Mapper009.cpp  Mapper009.h
src/header/: AudioOut.h  Bus.h  EmuApp.h  FileDialogs.h  GLTextures.h  KeyBinds.h  KeybindsUI.h  apu.h  cartridge.h  cpu.h  mapper.h  ppu.h
